# robinhood-client

./: .flake8  .gitignore  LICENSE.txt  MANIFEST.in  README.md  Robinhood.rst  conftest.py  contributing.md  pyproject.toml  requirements.in  requirements.txt  roadmap.md  test-requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-publish.yml  pypi-release.yml  pythonapp.yml
docs/: Makefile  ci-setup.md  cursor_pattern.md  make.bat  symbol_resolution.md  trusted-publishing-setup.md
docs/bruno/Robinhood/Account/: Account by Id.bru  Margin Interest.bru
docs/bruno/Robinhood/Auth/: Verification.bru
docs/bruno/Robinhood/Crypto/: Currency Pairs.bru  Portfolio by Id.bru  Portfolios.bru
docs/bruno/Robinhood/Health Checks/: Api Health.bru  Phoenix Health.bru
docs/bruno/Robinhood/Options/: Instruments.bru  Open Orders.bru  Orders.bru
docs/bruno/Robinhood/Stocks/: Orders.bru  folder.bru
docs/source/: advanced.rst  api.rst  conf.py  index.rst  install.rst  quickstart.rst
examples/: README.md  auto_retry_order.py  check_performance.py  close_option_position.py  cursor_example.py  deposit_funds_to_robinhood_account.py  get_accurate_gains.py  get_data_from_tags.py  get_option_historicals.py  notebook_example.ipynb  options_example.py  place_vertical_spread.py  symbol_resolution_example.py  two_factor_log_in.py  withdrawl_funds_to_bank_account.py  write_options_to_file.py
examples/robinhood examples/: auto_retry_order.py  check_performance.py  close_option_position.py  deposit_funds_to_robinhood_account.py  get_accurate_gains.py  get_data_from_tags.py  get_option_historicals.py  notebook_example.ipynb  place_vertical_spread.py  two_factor_log_in.py  withdrawl_funds_to_bank_account.py  write_options_to_file.py
examples/robinhood examples/notebooks/: account.ipynb
integration/data/: orders_tests.py
parakeet/: __init__.py  account.py  authentication.py  crypto.py  export.py  globals.py  helper.py  markets.py  options.py  orders.py  profiles.py  stocks.py  urls.py
parakeet/robinhood/: account.py  authentication.py  crypto.py  export.py  helper.py  markets.py  options.py  orders.py  profiles.py  stocks.py  urls.py
robinhood_client/: __init__.py
robinhood_client/common/: __init__.py  auth.py  clients.py  cursor.py  enums.py  logging.py  schema.py  session.py
robinhood_client/data/: __init__.py  instruments.py  orders.py  requests.py
robinhood_client/data/models/: base.py  stock_order.py
robinhood_client/legacy/: __init__.py  account.py  authentication.py  client.py  constants.py  crypto.py  export.py  globals.py  helper.py  logging.py  markets.py  options.py  orders.py  profiles.py  stocks.py  urls.py
src/: __init__.py  account.py  authentication.py  crypto.py  export.py  helper.py  markets.py  options.py  orders.py  profiles.py  stocks.py  urls.py
src/parakeet/: authentication.py  crypto.py  helper.py  markets.py  stocks.py
src/robinhood_client/: __init__.py  account.py  authentication.py  constants.py  crypto.py  exceptions.py  export.py  helper.py  logging.py  markets.py  options.py  orders.py  profiles.py  stocks.py  urls.py
tests/: integration_tests.py  test_robinhood.py
tests/common/: clients_tests.py  session_tests.py
tests/data/: orders_tests.py
tests/integration/data/: options_tests.py  orders_tests.py
tests/legacy/: integration_tests.py  unit_tests.py
tests/unit/common/: clients_tests.py  cursor_tests.py  session_tests.py
tests/unit/data/: instrument_cache_tests.py  options_cursor_tests.py  options_tests.py  orders_cursor_tests.py  orders_symbol_tests.py  orders_tests.py
tools/Bruno/: README.md
tools/Bruno/Robinhood/: bruno.json  collection.bru
tools/Bruno/Robinhood/Account/: Accounts.bru  Margin Calls.bru  folder.bru
tools/Bruno/Robinhood/Auth/: Inquiries.bru  Login.bru  Post Inquiries.bru  Prompt Status.bru  folder.bru
tools/Bruno/Robinhood/Bonfire/: Account Unified.bru  folder.bru
tools/Bruno/Robinhood/Crypto/: Accounts.bru  Orders.bru  folder.bru
tools/Bruno/Robinhood/Health Checks/: Bonfire Health.bru  Minerva Health.bru  Nummus Health.bru
tools/Bruno/Robinhood/Options/: Orders.bru  Positions.bru  folder.bru
tools/Bruno/Robinhood/Stocks/: Dividends.bru  Instruments.bru  Order by Id.bru  Position by Id.bru  Positions.bru  Splits for Instrument.bru
tools/Bruno/Robinhood/environments/: Robinhood Prod.bru
