[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include package data files if any are specified (e.g., via MANIFEST.in or package_data)
include-package-data = true

# Use the src directory as the package root
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = [
    "tests*",
    "docs*",
    "examples*",
]

[project]
name = "robinhood-client"
version = "1.0.0"
description = "An unofficial Python client for Robinhood API"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
    { name = "Ryan Miller", email = "mrzodge@gmail.com" },
]
keywords = ["robinhood", "http client", "api", "stocks", "options", "trading", "crypto", "investing"]
requires-python = ">=3.12"
dependencies = [
    "cryptography",
    "pydantic",
    "pyotp",
    "python-dotenv",
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RvanMiller/robinhood-client"
Repository = "https://github.com/RvanMiller/robinhood-client"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "pytest-dotenv",
    "python-dateutil",
]

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py", "*_tests.py"]
testpaths = ["tests",]