[project]
name = "robinhood-client"
version = "0.1.0"
description = "An unofficial Python REST client for Robinhood API."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Ryan Miller", email = "mrmiller87@gmail.com"}
]
keywords = [
    "robinhood",
    "api",
    "client",
    "stocks",
    "trading",
    "crypto",
    "investing"
]

[tool.poetry]
repository = "https://github.com/RvanMiller/robinhood-client"
homepage = "https://github.com/RvanMiller/robinhood-client"
packages = [{include = "robinhood_client"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12"
cryptography = "~45.0.6"
pydantic = "~2.11.7"
pyotp = "~2.9.0"
python-dotenv = "~1.1.1"
requests = "~2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "~8.4.1"
ruff = "~0.12.9"
pytest-dotenv = "~0.5.2"
python-dateutil = "~2.9.0.post0"

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["*_tests.py"]
testpaths = ["tests", "integration"]
norecursedirs = ["tests/legacy"]
